fixed icons not showing and the profile button

--- a/frontend/src/components/Navigation/ProfileButton-bonus.css
+++ b/frontend/src/components/Navigation/ProfileButton-bonus.css
@@ -5,10 +5,13 @@
 .buttn-fa-user-circle {
   border: none;
   background-color: #183d3d;
+  /* width: 50px;
+  height: 50px; */
 }
 
-.fa-user-circle {
+.circle-user {
   color: #5c8374;
+  height: 40px;
 }
 
 .menu li {
